[package]
name = "postbus"
version = "0.1.0"
authors = ["Leah <leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = { version = "0.8.9" }
#riker = "0.3"
#riker-patterns = "0.3"

#log = "0.4"
#pretty_env_logger = "0.3"
#xtra = { version = "0.2", features = ["with-tokio-0_2"] }
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
telegram-bot-async = "0.8.2"
uuid = { version = "0.7", features = ["v4"] }
#sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }
#sqlx-macros = { git =  "https://github.com/launchbadge/sqlx", version = "0.2", default-features = false, features = [ "runtime-tokio" ] }
serde = "1"
serde_derive = "1"
diesel = { version = "1", features = [ "postgres", "uuidv07", "r2d2" ] }
dotenv = "0.15"
chrono = "0.4"
stage = { path = "./stage-core" }
tracing = "0.1"
tracing-subscriber = "0.2"
